// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MainLayout rendering tests MainLayout - session defined - rendered 1`] = `
<div>
  <div
    class="h-full flex flex-row"
    data-testid="main-layout"
  >
    <div
      class="group/sidebar-wrapper has-data-[variant=inset]:bg-sidebar flex min-h-svh w-full"
      data-slot="sidebar-wrapper"
      style="--sidebar-width: 16rem; --sidebar-width-icon: 3rem;"
    >
      <div
        class="group peer text-sidebar-foreground hidden md:block"
        data-collapsible="icon"
        data-side="left"
        data-slot="sidebar"
        data-state="collapsed"
        data-variant="sidebar"
      >
        <div
          class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-200 ease-linear group-data-[collapsible=offcanvas]:w-0 group-data-[side=right]:rotate-180 group-data-[collapsible=icon]:w-(--sidebar-width-icon)"
          data-slot="sidebar-gap"
        />
        <div
          class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-200 ease-linear md:flex left-0 group-data-[collapsible=offcanvas]:left-[calc(var(--sidebar-width)*-1)] group-data-[collapsible=icon]:w-(--sidebar-width-icon) group-data-[side=left]:border-r group-data-[side=right]:border-l"
          data-slot="sidebar-container"
          data-testid="sidebar"
        >
          <div
            class="bg-sidebar group-data-[variant=floating]:border-sidebar-border flex h-full w-full flex-col group-data-[variant=floating]:rounded-lg group-data-[variant=floating]:border group-data-[variant=floating]:shadow-sm"
            data-sidebar="sidebar"
            data-slot="sidebar-inner"
          >
            <div
              class="flex flex-col gap-2 p-2"
              data-sidebar="header"
              data-slot="sidebar-header"
              data-testid="sidebar-header"
            >
              PM
            </div>
            <div
              class="flex min-h-0 flex-1 flex-col gap-2 overflow-auto group-data-[collapsible=icon]:overflow-hidden"
              data-sidebar="content"
              data-slot="sidebar-content"
              data-testid="sidebar-content"
            >
              <div
                class="relative flex w-full min-w-0 flex-col p-2"
                data-sidebar="group"
                data-slot="sidebar-group"
              >
                <div
                  class="text-sidebar-foreground/70 ring-sidebar-ring flex h-8 shrink-0 items-center rounded-md px-2 text-xs font-medium outline-hidden transition-[margin,opacity] duration-200 ease-linear focus-visible:ring-2 [&>svg]:size-4 [&>svg]:shrink-0 group-data-[collapsible=icon]:-mt-8 group-data-[collapsible=icon]:opacity-0"
                  data-sidebar="group-label"
                  data-slot="sidebar-group-label"
                >
                  Application
                </div>
                <div
                  class="w-full text-sm"
                  data-sidebar="group-content"
                  data-slot="sidebar-group-content"
                >
                  <ul
                    class="flex w-full min-w-0 flex-col gap-1"
                    data-sidebar="menu"
                    data-slot="sidebar-menu"
                  >
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                      data-testid="menu-item-prompts"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/prompts"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-file-text"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                          />
                          <path
                            d="M14 2v5a1 1 0 0 0 1 1h5"
                          />
                          <path
                            d="M10 9H8"
                          />
                          <path
                            d="M16 13H8"
                          />
                          <path
                            d="M16 17H8"
                          />
                        </svg>
                        <span>
                          Prompts
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                      data-testid="menu-item-templates"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/templates"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-layout-template"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="7"
                            rx="1"
                            width="18"
                            x="3"
                            y="3"
                          />
                          <rect
                            height="7"
                            rx="1"
                            width="9"
                            x="3"
                            y="14"
                          />
                          <rect
                            height="7"
                            rx="1"
                            width="5"
                            x="16"
                            y="14"
                          />
                        </svg>
                        <span>
                          Templates
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                      data-testid="menu-item-favorites"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/favorites"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-star"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                          />
                        </svg>
                        <span>
                          Favorites
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="relative flex w-full min-w-0 flex-col p-2"
                data-sidebar="group"
                data-slot="sidebar-group"
              >
                <div
                  class="text-sidebar-foreground/70 ring-sidebar-ring flex h-8 shrink-0 items-center rounded-md px-2 text-xs font-medium outline-hidden transition-[margin,opacity] duration-200 ease-linear focus-visible:ring-2 [&>svg]:size-4 [&>svg]:shrink-0 group-data-[collapsible=icon]:-mt-8 group-data-[collapsible=icon]:opacity-0"
                  data-sidebar="group-label"
                  data-slot="sidebar-group-label"
                >
                  Other
                </div>
                <div
                  class="w-full text-sm"
                  data-sidebar="group-content"
                  data-slot="sidebar-group-content"
                >
                  <ul
                    class="flex w-full min-w-0 flex-col gap-1"
                    data-sidebar="menu"
                    data-slot="sidebar-menu"
                  >
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                      data-testid="menu-item-feedback"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/feedback"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-send"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                          />
                          <path
                            d="m21.854 2.147-10.94 10.939"
                          />
                        </svg>
                        <span>
                          Feedback
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                      data-testid="menu-item-invite-people"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/invite-people"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-users"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                          />
                          <path
                            d="M16 3.128a4 4 0 0 1 0 7.744"
                          />
                          <path
                            d="M22 21v-2a4 4 0 0 0-3-3.87"
                          />
                          <circle
                            cx="9"
                            cy="7"
                            r="4"
                          />
                        </svg>
                        <span>
                          Invite People
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                      data-testid="menu-item-settings"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/settings"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-settings"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
                          />
                          <circle
                            cx="12"
                            cy="12"
                            r="3"
                          />
                        </svg>
                        <span>
                          Settings
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-2 p-2"
              data-sidebar="footer"
              data-slot="sidebar-footer"
              data-testid="sidebar-footer"
            >
              <ul
                class="flex w-full min-w-0 flex-col gap-1"
                data-sidebar="menu"
                data-slot="sidebar-menu"
                data-testid="sidebar-footer-menu"
              >
                <li
                  class="group/menu-item relative"
                  data-sidebar="menu-item"
                  data-slot="sidebar-menu-item"
                >
                  <div
                    data-slot="dropdown-menu"
                    data-testid="mock-react-dropdown-menu-root"
                  >
                    <div
                      data-slot="dropdown-menu-trigger"
                      data-testid="mock-react-dropdown-menu-trigger"
                    >
                      <button
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-user-round"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="12"
                            cy="8"
                            r="5"
                          />
                          <path
                            d="M20 21a8 8 0 0 0-16 0"
                          />
                        </svg>
                         
                        User Name 1
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevron-up ml-auto"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m18 15-6-6-6 6"
                          />
                        </svg>
                      </button>
                    </div>
                    <div
                      data-testid="mock-react-dropdown-menu-portal"
                    >
                      <div
                        class="bg-popover text-popover-foreground data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 max-h-(--radix-dropdown-menu-content-available-height) min-w-[8rem] origin-(--radix-dropdown-menu-content-transform-origin) overflow-x-hidden overflow-y-auto rounded-md border p-1 shadow-md w-(--radix-popper-anchor-width)"
                        data-slot="dropdown-menu-content"
                        data-testid="mock-react-dropdown-menu-content"
                        side="top"
                        sideoffset="4"
                      >
                        <div
                          class="focus:bg-accent focus:text-accent-foreground data-[variant=destructive]:text-destructive data-[variant=destructive]:focus:bg-destructive/10 dark:data-[variant=destructive]:focus:bg-destructive/20 data-[variant=destructive]:focus:text-destructive data-[variant=destructive]:*:[svg]:!text-destructive [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled]:pointer-events-none data-[disabled]:opacity-50 data-[inset]:pl-8 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                          data-slot="dropdown-menu-item"
                          data-testid="account"
                          data-variant="default"
                        >
                          <span>
                            Account
                          </span>
                        </div>
                        <div
                          class="focus:bg-accent focus:text-accent-foreground data-[variant=destructive]:text-destructive data-[variant=destructive]:focus:bg-destructive/10 dark:data-[variant=destructive]:focus:bg-destructive/20 data-[variant=destructive]:focus:text-destructive data-[variant=destructive]:*:[svg]:!text-destructive [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled]:pointer-events-none data-[disabled]:opacity-50 data-[inset]:pl-8 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                          data-slot="dropdown-menu-item"
                          data-testid="billing"
                          data-variant="default"
                        >
                          <span>
                            Billing
                          </span>
                        </div>
                        <div
                          class="focus:bg-accent focus:text-accent-foreground data-[variant=destructive]:text-destructive data-[variant=destructive]:focus:bg-destructive/10 dark:data-[variant=destructive]:focus:bg-destructive/20 data-[variant=destructive]:focus:text-destructive data-[variant=destructive]:*:[svg]:!text-destructive [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled]:pointer-events-none data-[disabled]:opacity-50 data-[inset]:pl-8 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
                          data-slot="dropdown-menu-item"
                          data-testid="sign-out"
                          data-variant="default"
                        >
                          <span>
                            Sign out
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <main
        class="flex-1 wrapper"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-7"
          data-sidebar="trigger"
          data-slot="sidebar-trigger"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-panel-left"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M9 3v18"
            />
          </svg>
          <span
            class="sr-only"
          >
            Toggle Sidebar
          </span>
        </button>
        <div
          data-testid="test-1"
        />
      </main>
    </div>
  </div>
</div>
`;

exports[`MainLayout rendering tests MainLayout - session undefined - rendered 1`] = `
<div>
  <div
    class="h-full flex flex-row"
    data-testid="main-layout"
  >
    <div
      class="group/sidebar-wrapper has-data-[variant=inset]:bg-sidebar flex min-h-svh w-full"
      data-slot="sidebar-wrapper"
      style="--sidebar-width: 16rem; --sidebar-width-icon: 3rem;"
    >
      <div
        class="group peer text-sidebar-foreground hidden md:block"
        data-collapsible="icon"
        data-side="left"
        data-slot="sidebar"
        data-state="collapsed"
        data-variant="sidebar"
      >
        <div
          class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-200 ease-linear group-data-[collapsible=offcanvas]:w-0 group-data-[side=right]:rotate-180 group-data-[collapsible=icon]:w-(--sidebar-width-icon)"
          data-slot="sidebar-gap"
        />
        <div
          class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-200 ease-linear md:flex left-0 group-data-[collapsible=offcanvas]:left-[calc(var(--sidebar-width)*-1)] group-data-[collapsible=icon]:w-(--sidebar-width-icon) group-data-[side=left]:border-r group-data-[side=right]:border-l"
          data-slot="sidebar-container"
          data-testid="sidebar"
        >
          <div
            class="bg-sidebar group-data-[variant=floating]:border-sidebar-border flex h-full w-full flex-col group-data-[variant=floating]:rounded-lg group-data-[variant=floating]:border group-data-[variant=floating]:shadow-sm"
            data-sidebar="sidebar"
            data-slot="sidebar-inner"
          >
            <div
              class="flex flex-col gap-2 p-2"
              data-sidebar="header"
              data-slot="sidebar-header"
              data-testid="sidebar-header"
            >
              PM
            </div>
            <div
              class="flex min-h-0 flex-1 flex-col gap-2 overflow-auto group-data-[collapsible=icon]:overflow-hidden"
              data-sidebar="content"
              data-slot="sidebar-content"
              data-testid="sidebar-content"
            >
              <div
                class="relative flex w-full min-w-0 flex-col p-2"
                data-sidebar="group"
                data-slot="sidebar-group"
              >
                <div
                  class="text-sidebar-foreground/70 ring-sidebar-ring flex h-8 shrink-0 items-center rounded-md px-2 text-xs font-medium outline-hidden transition-[margin,opacity] duration-200 ease-linear focus-visible:ring-2 [&>svg]:size-4 [&>svg]:shrink-0 group-data-[collapsible=icon]:-mt-8 group-data-[collapsible=icon]:opacity-0"
                  data-sidebar="group-label"
                  data-slot="sidebar-group-label"
                >
                  Application
                </div>
                <div
                  class="w-full text-sm"
                  data-sidebar="group-content"
                  data-slot="sidebar-group-content"
                >
                  <ul
                    class="flex w-full min-w-0 flex-col gap-1"
                    data-sidebar="menu"
                    data-slot="sidebar-menu"
                  >
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                      data-testid="menu-item-prompts"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/prompts"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-file-text"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                          />
                          <path
                            d="M14 2v5a1 1 0 0 0 1 1h5"
                          />
                          <path
                            d="M10 9H8"
                          />
                          <path
                            d="M16 13H8"
                          />
                          <path
                            d="M16 17H8"
                          />
                        </svg>
                        <span>
                          Prompts
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                      data-testid="menu-item-templates"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/templates"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-layout-template"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="7"
                            rx="1"
                            width="18"
                            x="3"
                            y="3"
                          />
                          <rect
                            height="7"
                            rx="1"
                            width="9"
                            x="3"
                            y="14"
                          />
                          <rect
                            height="7"
                            rx="1"
                            width="5"
                            x="16"
                            y="14"
                          />
                        </svg>
                        <span>
                          Templates
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                      data-testid="menu-item-favorites"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/favorites"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-star"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                          />
                        </svg>
                        <span>
                          Favorites
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="relative flex w-full min-w-0 flex-col p-2"
                data-sidebar="group"
                data-slot="sidebar-group"
              >
                <div
                  class="text-sidebar-foreground/70 ring-sidebar-ring flex h-8 shrink-0 items-center rounded-md px-2 text-xs font-medium outline-hidden transition-[margin,opacity] duration-200 ease-linear focus-visible:ring-2 [&>svg]:size-4 [&>svg]:shrink-0 group-data-[collapsible=icon]:-mt-8 group-data-[collapsible=icon]:opacity-0"
                  data-sidebar="group-label"
                  data-slot="sidebar-group-label"
                >
                  Other
                </div>
                <div
                  class="w-full text-sm"
                  data-sidebar="group-content"
                  data-slot="sidebar-group-content"
                >
                  <ul
                    class="flex w-full min-w-0 flex-col gap-1"
                    data-sidebar="menu"
                    data-slot="sidebar-menu"
                  >
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                      data-testid="menu-item-feedback"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/feedback"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-send"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                          />
                          <path
                            d="m21.854 2.147-10.94 10.939"
                          />
                        </svg>
                        <span>
                          Feedback
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                      data-testid="menu-item-invite-people"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/invite-people"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-users"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                          />
                          <path
                            d="M16 3.128a4 4 0 0 1 0 7.744"
                          />
                          <path
                            d="M22 21v-2a4 4 0 0 0-3-3.87"
                          />
                          <circle
                            cx="9"
                            cy="7"
                            r="4"
                          />
                        </svg>
                        <span>
                          Invite People
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                      data-testid="menu-item-settings"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/settings"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-settings"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
                          />
                          <circle
                            cx="12"
                            cy="12"
                            r="3"
                          />
                        </svg>
                        <span>
                          Settings
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col gap-2 p-2"
              data-sidebar="footer"
              data-slot="sidebar-footer"
              data-testid="sidebar-footer"
            >
              <ul
                class="flex w-full min-w-0 flex-col gap-1"
                data-sidebar="menu"
                data-slot="sidebar-menu"
                data-testid="sidebar-footer-menu"
              >
                <li
                  class="group/menu-item relative"
                  data-sidebar="menu-item"
                  data-slot="sidebar-menu-item"
                />
              </ul>
            </div>
          </div>
        </div>
      </div>
      <main
        class="flex-1 wrapper"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-7"
          data-sidebar="trigger"
          data-slot="sidebar-trigger"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-panel-left"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M9 3v18"
            />
          </svg>
          <span
            class="sr-only"
          >
            Toggle Sidebar
          </span>
        </button>
        <div
          data-testid="test-1"
        />
      </main>
    </div>
  </div>
</div>
`;
